--- a/auftraege/datumsformatierung/V1/datumsformatierungTest/datumsformatierungV1.test.csproj
+++ b/auftraege/datumsformatierung/V1/datumsformatierungTest/datumsformatierungV1.test.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\datumsformatierung\datumsformatierung.csproj" />
+    <ProjectReference Include="..\datumsformatierung\datumsformatierungV1.csproj" />
   </ItemGroup>
 
 </Project>
